# bank-balance-pred

./: .gitignore  README.md  config.py  conformed.py  features.py  gen_movements.py  gen_profiles.py  pyproject.toml  supervised.py  train.ipynb
src/: config.py
src/data_gen/: movements.py  profiles.py
src/features/: engineering.py
src/notebooks/: 01_independent_models.ipynb  02_global_model.ipynb  03_train_tft.ipynb
src/targets/: global_horizon.py  multi_target.py  tft_dataset.py
