[project]
name = "bank-ts-pred"
version = "0.1.0"
description = "Prototype for multi-horizon bank deposit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "fastparquet>=2026.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.2",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
